<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.konradlorenz.becas_u.InfoBeca">

    <ScrollView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="6dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewNombreEntidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Nombre del ofertante:"
                    android:textSize = "@dimen/text_dimension_subtitle"/>

                <TextView
                    android:id="@+id/textoNombreEntidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/nombre_del_ofertante"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize = "@dimen/text_dimension"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

                <TextView
                    android:id="@+id/textViewNombreDeLaOferta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Nombre de la oferta:"
                    android:textSize = "@dimen/text_dimension_subtitle"/>

                <TextView
                    android:id="@+id/textoNombreOferta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/nombre_de_la_oferta"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize = "@dimen/text_dimension"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textViewDatosOferta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Datos de la oferta:"
                    android:textSize = "@dimen/text_dimension_subtitle"/>

                <TextView
                    android:id="@+id/textoDatosOferta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"

                    android:text="@string/datos_de_la_oferta"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize = "@dimen/text_dimension"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textViewIncluye"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Incluye:"
                    android:textSize = "@dimen/text_dimension_subtitle"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textoIncluye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/incluye"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize = "@dimen/text_dimension"/>

                <TextView
                    android:id="@+id/textViewRequisitos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Requisitos:"
                    android:textSize = "@dimen/text_dimension_subtitle"/>


                <TextView
                    android:id="@+id/textoRequisitos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/requisitos"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize = "@dimen/text_dimension"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textViewDocumentos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="Documentos a presentar:"
                    android:textSize = "@dimen/text_dimension_subtitle"/>

                <TextView
                    android:id="@+id/textoDocumentos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/documento_a_presentar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize = "@dimen/text_dimension"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonInfoCompleta"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:elevation="0dp"
                    android:text="Toca acá para ver la convocatoria completa"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize = "@dimen/text_dimension"/>
                    />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
